--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^12.4.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-github-calendar": "^4.5.6",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0"
   },
